--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <tr>
                   <td>UG</td>
                   <td>GH Raisoni College Of Engineering & technology,Wagholi Pune</td>
-                  <td><a href="https://ghriet.raisoni.net/">College Link</a></td>
+                  <td><a href="https://ghrcem.raisoni.net/">College Link</a></td>
                   <td>9.27Cgpa</td>
                 </tr>
                 <tr>
                   <td>Diploma</td>
                   <td>shree shivaji college of institute </td>
-                  <td><a href="https://gpabad.ac.in/">College Link</a> </td>
+                  <td><a href="http://sspi.net.in/">College Link</a> </td>
                   <td>85.86%</td>
                 </tr>
               
